# AI_solo_coder_task_B_155

./: .dockerignore  .env.example  .gitignore  CHANGES_V2.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/config/: acoustics.json  app.json  medium_properties.json
backend/src/: acoustic_simulator.rs  acoustics.rs  alarm_ws.rs  alerts.rs  config.rs  config_loader.rs  db_writer.rs  handlers.rs  localization.rs  main.rs  metrics.rs  models.rs  mqtt_receiver.rs  mqtt_subscriber.rs  pipeline.rs  source_locator.rs  store.rs  websocket.rs
database/: init.sql
docker/: backend.Dockerfile  simulator.Dockerfile
docker/clickhouse/: config.xml
docker/mosquitto/: mosquitto.conf
docker/prometheus/: prometheus.yml
frontend/: acoustic_panel.js  app.js  ground_listening_3d.js  index.html  style.css
mosquitto/: mosquitto.conf
simulator/: requirements.txt  urn_sensor_sim.py  urn_sensor_simulator.py
